--- a/dev/pyRevitLoader/Directory.Build.targets
+++ b/dev/pyRevitLoader/Directory.Build.targets
@@ -10,6 +10,7 @@
         <Compile Include="..\Source\PyRevitLoaderApplication.cs" Link="Source\PyRevitLoaderApplication.cs"/>
         <Compile Include="..\Source\ScriptExecutor.cs" Link="Source\ScriptExecutor.cs"/>
         <Compile Include="..\Source\SmartButtonExecutor.cs" Link="Source\SmartButtonExecutor.cs"/>
+        <Compile Include="..\Source\ComboBoxExecutor.cs" Link="Source\ComboBoxExecutor.cs"/>
     </ItemGroup>
 
     <ItemGroup Condition="'$(UseRunner)' == 'true'">
