fix: correct German translation for panel display options in bundle.yaml

--- a/extensions/pyRevitDevTools.extension/pyRevitDev.tab/Debug.panel/Debug Dialog Config.panelbutton/bundle.yaml
+++ b/extensions/pyRevitDevTools.extension/pyRevitDev.tab/Debug.panel/Debug Dialog Config.panelbutton/bundle.yaml
@@ -4,8 +4,8 @@ title:
   de: Panelkonfiguration
 tooltips:
   en_us: Configure panel display options and debug settings
-  fr: Configurer les options d'affichage du panneau et les paramètres de débogage
-  de: Optionen für die Panelanzeige und Debug-Einstellungen konfigurieren
+  fr: Configurer les options d'affichage du panneau et les paramï¿½tres de dï¿½bogage
+  de: Optionen fÃ¼r die Panelanzeige und Debug-Einstellungen konfigurieren
 author: Test User
 min_revit_version: 2019
 context: zero-doc
