Add German, Spanish, and Chinese translations for pyRevit settings UI
- Added translations for the settings window in German (de_de), Spanish (es_es), and Chinese (zh_cn).
- Updated existing YAML file to include Chinese tooltip descriptions.
- Enhanced user experience by providing localized settings options for a broader audience.

--- a/extensions/pyRevitCore.extension/pyRevit.tab/pyRevit.panel/Settings.smartbutton/bundle.yaml
+++ b/extensions/pyRevitCore.extension/pyRevit.tab/pyRevit.panel/Settings.smartbutton/bundle.yaml
@@ -4,10 +4,11 @@ title:
   fr_fr: Paramètres
   es_es: 'Configuración'
   de_de: Einstellungen
+  zh_cn: 设置
 tooltip:
   ru: >-
     Показывает окно настроек pyRevit. Вы можете настраивать как pyRevit загружает и устанавливает некоторые параметры.
-    
+
     Shift-Click:
 
     Показать файл конфигурации в проводнике.
@@ -29,7 +30,7 @@ tooltip:
     Shift-Click:
 
     Muestra el archivo de configuración en el explorador.
-    
+
     Muestra la ventana de preferencias de pyRevit. Puedes personalizar la forma en carga pyRevit así como definir configuraciones base
   de_de: >-
     Zeigt den Einstellungsdialog von pyRevit an. Hier kannst du einstellen, wie pyRevit geladen wird und einige weitere Basiseinstellungen ändern. 
@@ -37,6 +38,12 @@ tooltip:
     Shift-Click:
 
     Zeigt die Konfigurationsdatei im Explorer an. 
+  zh_cn: >-
+    显示 pyRevit 的首选项窗口。您可以在此处自定义 pyRevit 的加载方式并设置一些基本参数。
+
+    Shift-Click:
+
+    在资源管理器中显示配置文件。
 context: zero-doc
 engine:
   clean: true
