--- a/extensions/pyRevitCore.extension/pyRevit.tab/pyRevit.panel/Extensions.smartbutton/bundle.yaml
+++ b/extensions/pyRevitCore.extension/pyRevit.tab/pyRevit.panel/Extensions.smartbutton/bundle.yaml
@@ -3,9 +3,13 @@ title:
   en_us: Extensions
   es_es: Extensiones
   de_de: Erweiterungen
+  fr_fr: Extensions
+  zh_cn: 扩展
 tooltip:
   ru: Добавляет или удаляет pyRevit расширения.
   en_us: Add or remove pyRevit extensions
   es_es: Agrega o quita extensiones de pyRevit
   de_de: Erweiterungen hinzufügen oder entfernen
+  fr_fr: Ajouter ou supprimer des extensions pyRevit
+  zh_cn: 添加或删除 pyRevit 扩展
 context: zero-doc
