--- a/dev/Directory.Build.props
+++ b/dev/Directory.Build.props
@@ -23,8 +23,11 @@
   </PropertyGroup>
 
   <ItemGroup Condition="'$(UseRevit)' == 'true'">
-    <PackageReference Include="Autodesk.Revit.Sdk.Refs" Version="*" />
-    <PackageReference Include="Autodesk.Revit.Sdk.Refs.$(RevitVersion)" Version="*" />
+    <PackageReference Include="Nice3point.Revit.Api.RevitAPI" Version="$(RevitVersion).*" />
+    <PackageReference Include="Nice3point.Revit.Api.RevitAPIUI" Version="$(RevitVersion).*" />
+    <PackageReference Include="Nice3point.Revit.Api.AdWindows" Version="$(RevitVersion).*" />
+    <PackageReference Include="Nice3point.Revit.Api.UIFramework" Version="$(RevitVersion).*" />
+    <PackageReference Include="Nice3point.Revit.Api.UIFrameworkServices" Version="$(RevitVersion).*" />
   </ItemGroup>
   <ItemGroup>
     <Reference
