--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,6 +72,11 @@ jobs:
         with:
           dotnet-version: 8.0.x
 
+      - name: Prepare .NET 10.0
+        uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: 10.0.x
+
       - name: Prepare msbuild
         uses: microsoft/setup-msbuild@v2
 
