--- a/dev/Directory.Build.targets
+++ b/dev/Directory.Build.targets
@@ -63,22 +63,22 @@
         <DefineConstants>$(DefineConstants);REVIT2021;REVIT2021_OR_GREATER</DefineConstants>
     </PropertyGroup>
     <PropertyGroup Condition="'$(RevitVersion)' == '2022'">
-        <DefineConstants>$(DefineConstants);REVIT2022;REVIT2021_OR_GREATER</DefineConstants>
+        <DefineConstants>$(DefineConstants);REVIT2022;REVIT2021_OR_GREATER;REVIT2022_OR_GREATER</DefineConstants>
     </PropertyGroup>
     <PropertyGroup Condition="'$(RevitVersion)' == '2023'">
-        <DefineConstants>$(DefineConstants);REVIT2023;REVIT2021_OR_GREATER</DefineConstants>
+        <DefineConstants>$(DefineConstants);REVIT2023;REVIT2021_OR_GREATER;REVIT2022_OR_GREATER</DefineConstants>
     </PropertyGroup>
     <PropertyGroup Condition="'$(RevitVersion)' == '2024'">
-        <DefineConstants>$(DefineConstants);REVIT2024;REVIT2021_OR_GREATER</DefineConstants>
+        <DefineConstants>$(DefineConstants);REVIT2024;REVIT2021_OR_GREATER;REVIT2022_OR_GREATER</DefineConstants>
     </PropertyGroup>
     <PropertyGroup Condition="'$(RevitVersion)' == '2025'">
-        <DefineConstants>$(DefineConstants);REVIT2025;REVIT2021_OR_GREATER</DefineConstants>
+        <DefineConstants>$(DefineConstants);REVIT2025;REVIT2021_OR_GREATER;REVIT2022_OR_GREATER</DefineConstants>
     </PropertyGroup>
     <PropertyGroup Condition="'$(RevitVersion)' == '2026'">
-        <DefineConstants>$(DefineConstants);REVIT2026;REVIT2021_OR_GREATER</DefineConstants>
+        <DefineConstants>$(DefineConstants);REVIT2026;REVIT2021_OR_GREATER;REVIT2022_OR_GREATER</DefineConstants>
     </PropertyGroup>
     <PropertyGroup Condition="'$(RevitVersion)' == '2027'">
-        <DefineConstants>$(DefineConstants);REVIT2027;REVIT2021_OR_GREATER</DefineConstants>
+        <DefineConstants>$(DefineConstants);REVIT2027;REVIT2021_OR_GREATER;REVIT2022_OR_GREATER</DefineConstants>
     </PropertyGroup>
 
     <!-- Xceed.Wpf.AvalonDock reference (must be in targets to use RevitDevDir and RevitVersion) -->
