fix: double-check help url usage with notion and make changes

--- a/dev/pyRevitLoader/pyRevitExtensionParserTester/pyRevitExtensionParserTest.csproj
+++ b/dev/pyRevitLoader/pyRevitExtensionParserTester/pyRevitExtensionParserTest.csproj
@@ -54,6 +54,7 @@
     <Compile Include="ControlIdTests.cs" />
     <Compile Include="MultilineTitleTest.cs" />
     <Compile Include="UrlButtonTests.cs" />
+    <Compile Include="HelpUrlTests.cs" />
   </ItemGroup>
 
   <ItemGroup>
